firewall/my-new-spec.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-02-07T19:36:34Z
  generation: 3
  labels:
    k8s-app: nginx
  name: nginx
  namespace: nginx
  resourceVersion: "40025"
  selfLink: /apis/extensions/v1beta1/namespaces/nginx/deployments/nginx
  uid: 34a484c9-0c3e-11e8-821f-005056ba1922
spec:
  progressDeadlineSeconds: 600
  replicas: 6
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: nginx
      name: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 5
  conditions:
  - lastTransitionTime: 2018-02-07T19:36:34Z
    lastUpdateTime: 2018-02-07T19:37:06Z
    message: ReplicaSet "nginx-6d4b4788df" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: 2018-02-07T19:50:11Z
    lastUpdateTime: 2018-02-07T19:50:11Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 5
  replicas: 6
  unavailableReplicas: 1
  updatedReplicas: 6
